test/Fail/Issue3586.err
Issue3586.agda:15.1-14: error: [InvalidPattern]
y ^ z is not a valid pattern
when scope checking the left-hand side foo x@(y ^ z) in the
definition of foo
